# cxstat

./: .gitignore  AGENTS.md  README.md  pyproject.toml
.github/workflows/: publish.yml
cxstat/: __init__.py  claude.py  claude_models.py  cli.py  log_models.py  logger.py  main.py  models.py  service.py  theme.py  utils.py  view.py
cxstat/cli/: main.py  options.py
tests/: __init__.py  test_cli.py  test_log_models.py  test_models.py
tests/samples/claude/projects/sample/: sample.json  sample.jsonl
tests/samples/codex/sessions/2025/08/14/: rollout-2025-08-14T18-42-29-8b3d642f-5974-47c8-b9d4-09efcc975a02.jsonl  rollout-2025-08-14T18-51-35-4091de60-5be5-441a-b4e2-6bf2bbe38936.jsonl  rollout-2025-08-14T18-51-58-2110ac1e-d566-450f-ae99-d5c2f9189b47.jsonl  rollout-2025-08-14T23-02-06-db97fe17-d02a-46d7-b53d-941e3fdebae0.jsonl
tests/samples/codex/sessions/2025/08/16/: rollout-2025-08-16T14-47-57-bb1b1a75-db42-492d-aeff-e6ebb218504b.jsonl  rollout-2025-08-16T14-48-19-593b4a82-6eb2-4377-b183-1cca9c65de92.jsonl
tests/samples/codex/sessions/2025/08/20/: rollout-2025-08-20T07-30-07-a3d3d704-9181-433b-8ce3-60ea95a1e3e9.jsonl  rollout-2025-08-20T07-30-54-5ff5efb9-c9da-48f9-a5bb-2724b4ebc8f8.jsonl
tests/samples/codex/sessions/2025/08/21/: rollout-2025-08-21T22-38-32-e0ac459b-1b1c-46a7-b10e-635ef278804d.jsonl  rollout-2025-08-21T23-17-55-797d2c5c-fe08-49f2-a04c-a85f44c0acdd.jsonl
tests/samples/codex/sessions/2025/09/02/: rollout-2025-09-02T21-50-52-3d49193a-f549-4e3e-846d-141f561c3a0a.jsonl  rollout-2025-09-02T21-51-19-6234732c-36ef-455f-9bf0-9b7b774334c7.jsonl  rollout-2025-09-02T21-51-44-f8381c3d-1a8d-4489-a5e7-58b9c5a64d39.jsonl
tests/samples/codex/sessions/2025/09/03/: rollout-2025-09-03T21-32-49-c507d81e-9264-44e5-976a-8229899620e1.jsonl  rollout-2025-09-03T21-34-30-ba3f1b41-b208-40f5-8ce7-e5137692cbe6.jsonl  rollout-2025-09-03T21-35-02-7ad475de-d843-42fa-a3d6-a0a596c4dba9.jsonl  rollout-2025-09-03T21-47-35-bee066af-ab18-4696-a167-5691cefe43e6.jsonl  rollout-2025-09-03T21-50-34-1d6ab4ab-ac65-4cf6-949b-137d93a22935.jsonl  rollout-2025-09-03T21-51-39-a4f66f46-e9fb-4d6a-83f5-21b28d71a7e7.jsonl  rollout-2025-09-03T21-57-14-96ac8c36-036b-4709-9174-d5e31e90634c.jsonl  rollout-2025-09-03T21-58-07-00b8dd50-3f3f-44a8-bacf-5bc6b21ed2ad.jsonl
tests/samples/codex/sessions/2025/09/06/: rollout-2025-09-06T23-18-52-f61f167d-b378-41fa-8e6f-8eb56ff2fad5.jsonl
tests/samples/codex/sessions/2025/09/12/: rollout-2025-09-12T21-31-12-0a643b8d-ebe5-44e5-9b22-7f6f102e-83e9-4307-a049-b11794b9d2e3.jsonl  rollout-2025-09-12T21-31-12-0a643b8d-ebe5-44e5-9b22-853f83515975.jsonl  rollout-2025-09-12T21-38-01-b4876e16-602f-4f49-a1a7-5cda29bd1c00.jsonl
tests/samples/codex/sessions/2025/09/13/: rollout-2025-09-13T23-29-11-802ce319-f47d-4de5-987f-78f3daad9e25.jsonl
tests/samples/codex/sessions/2025/09/14/: rollout-2025-09-14T09-35-33-505291f9-14f3-441b-9363-1e99cb7a39ad.jsonl  rollout-2025-09-14T23-34-30-cc8c054c-f85c-42dc-ae7c-3d0437a49183.jsonl  rollout-2025-09-14T23-54-21-627bd4a1-5290-4d0c-acef-0e9264c4c7c5.jsonl
tests/samples/codex/sessions/2025/09/15/: rollout-2025-09-15T00-33-49-e4988bfe-b20d-431e-92c3-995f1d081eff.jsonl  rollout-2025-09-15T00-48-55-5ec5b609-e786-468f-ae2e-d997e467c553.jsonl
tests/samples/codex/sessions/2025/09/18/: rollout-2025-09-18T14-22-37-3fff6783-daca-4d60-8eca-05b67fe04ac5.jsonl  rollout-2025-09-18T14-23-30-7dd8c1b5-fd42-476a-ab0d-280506480a10.jsonl  rollout-2025-09-18T14-23-44-81d3a016-8f48-4773-9c93-4b322294b639.jsonl  rollout-2025-09-18T14-25-41-62015281-24fc-401c-a881-05d7724b2f97.jsonl  rollout-2025-09-18T14-26-47-ddea0424-8bb3-4d29-9902-78b3b345fdf7.jsonl  rollout-2025-09-18T14-34-21-aa81cfb4-56e2-4c6e-853a-a1d3c9d2e6b9.jsonl  rollout-2025-09-18T14-35-42-32d9ec28-bdbd-4a8c-b8cd-9a1456e4b4df.jsonl  rollout-2025-09-18T14-37-42-b4881366-9969-44b7-964d-883f127b2668.jsonl  (+6 more)
tokstat/: __init__.py  cli.py  main.py  models.py  view.py
(+95 files in other folders)
