[project]
name = "cxstat"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "tiktoken>=0.12.0",
    "typer>=0.12",
    "rich>=13",
]

[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"

[project.scripts]
cxstat = "cxstat.cli:app"

[tool.pyright]
include = [
    "cxstat"
]
exclude = [
    "**/__pycache__",
]
typeCheckingMode = "basic"

[tool.ruff]
target-version = "py312"
select = [
    "ALL"
]
line-length = 120

[tool.ruff.pydocstyle]
convention = "google"

[tool.ruff.pylint]
max-args = 10
