[project]
name = "cxstat"
version = "0.1.2"
description = "Token usage analytics for Codex CLI sessions"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "takeshid", email = "goriponikeike55@gmail.com" }]
keywords = ["codex", "tokenusage", "mcp", "llm"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "tiktoken>=0.12.0",
    "typer>=0.12",
    "rich>=13",
    "pydantic>=2.7",
    "pytest>=8.3",
]

[project.urls]
Repository = "https://github.com/takeshiD/cxstat"

[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
include = ["/README.md", "/cxstat"]

[project.scripts]
cxstat = "cxstat.cli.main:run"

[tool.pyright]
include = ["cxstat"]
exclude = ["**/__pycache__"]
typeCheckingMode = "basic"

[tool.ruff]
target-version = "py312"
include = ["cxstat/*.py", "tests/*.py"]
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]
line-length = 88
indent-width = 4

[tool.ruff.lint]
select = ["E", "F", "UP", "B", "SIM", "I"]
ignore = []
fixable = ["ALL"]
unfixable = []

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = false
docstring-code-line-length = "dynamic"

[tool.pytest.ini_options]
addopts = "-ra -v"
testpaths = [
    "tests"
]

[dependency-groups]
dev = [
    "bpython>=0.25",
]
